# OS

./: .gitignore
Kollokvium_1/: CMakeLists.txt  README.md  main.cpp
Kollokvium_1/Headers/: DuplicateRemover.h  Factorial.h  LinkedList.h  Menu.h  Node.h
Kollokvium_1/Sources/: DuplicateRemover.cpp  Factorial.cpp  LinkedList.cpp  Menu.cpp  Node.cpp
Kollokvium_1/Tests/: DuplicateRemoverTests.cpp  FactorialTests.cpp  LinkedListTests.cpp  MenuTests.cpp  NodeTests.cpp
Lab1/: CMakeLists.txt  Employee.h  README.md  creator.cpp  main.cpp  reporter.cpp
Lab1/tests/: input_data  main_test.cpp
Lab1/tests/input_data/: input_creator_dup.txt  input_creator_longname.txt  input_creator_valid.txt  tmp_bad_hours.txt  tmp_bad_num.txt
Lab2/: README.md
Lab2/STDThread/: CMakeLists.txt  main.cpp
Lab2/STDThread/Headers/: ThreadHandler.h
Lab2/STDThread/Source/: Array.cpp  ThreadHandler.cpp
Lab2/STDThread/Tests/: ArrayTests.cpp  MainTests.cpp  ThreadHandlerTests.cpp
Lab2/WinAPI/: CMakeLists.txt  main.cpp
Lab2/WinAPI/Headers/: Array.h  ThreadHandler.h
Lab2/WinAPI/Source/: Array.cpp  ThreadHandler.cpp
Lab2/WinAPI/Tests/: ArrayTests.cpp  MainTests.cpp  TestFixtures.cpp  ThreadHandlerTests.cpp
Lab3/STDThread/: CMakeLists.txt  main.cpp
Lab3/STDThread/Headers/: Array.h  Event.h  Thread.h  ThreadHandler.h
Lab3/STDThread/Source/: Event.cpp  Thread.cpp  ThreadHandler.cpp
Lab3/STDThread/Tests/: ArrayTests.cpp  EventTests.cpp  TestFixtures.cpp  ThreadHandlerTests.cpp  ThreadTests.cpp
Lab3/WinAPI/: CMakeLists.txt  main.cpp
Lab3/WinAPI/Headers/: Array.h  Thread.h  ThreadHandler.h
Lab3/WinAPI/Source/: Array.cpp  Thread.cpp  ThreadHandler.cpp
Lab3/WinAPI/Tests/: ArrayTests.cpp  MainTests.cpp  ThreadHandlerTests.cpp  ThreadTests.cpp
Lab4/STDThread/: CMakeLists.txt  Receiver.cpp  Sender.cpp
Lab4/STDThread/Headers/: ExceptionHandler.h  Message.h  MessageRingQueue.h  SharedState.h
Lab4/STDThread/Source/: ExceptionHandler.cpp  SharedState.cpp
Lab4/STDThread/Tests/: ExceptionHandlerTests.cpp  MessageRingQueueTests.cpp  ReceiverTests.cpp  SharedState.cpp  TestsMain.cpp
Lab4/WinAPI/: CMakeLists.txt  Receiver.cpp  Sender.cpp
Lab4/WinAPI/Headers/: ExceptionHandler.h  MessageRingQueue.h
Lab4/WinAPI/Reports/allure-report/: index.html
Lab4/WinAPI/Reports/allure-report/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
Lab4/WinAPI/Reports/allure-report/data/test-cases/: 17e73c1f767b6fad.json  19ce6f16f320d98.json  2330c2a26c6b09fd.json  42fd262c815c6618.json  5e42481147398640.json  6d198e8b01586110.json  6f4de5f39849bf8b.json  72972246c29802e9.json  7a1f1afd7bfd1fc6.json  81a9b41c4105e88f.json  902929d169a07fa5.json  9fc671a5670b5c25.json  a7cf1bf0fad6f37c.json  c3eb6a5e076430cc.json  c865df7014ddbd3e.json  d531468577a5de17.json  dbdcc4078390e3e0.json  e7595b890b6f9832.json  eb90ec4838026376.json  ecc139d2a7026e76.json  f3ff8fa6fa59d1ac.json  f59153b54f967f53.json
Lab4/WinAPI/Reports/allure-report/export/: influxDbData.txt  prometheusData.txt
Lab4/WinAPI/Reports/allure-report/history/: history.json
Lab4/WinAPI/Reports/allure-report/widgets/: severity.json  status-chart.json  suites.json  summary.json
Lab4/WinAPI/Reports/allure-results/: junit.xml
Lab4/WinAPI/Source/: ExceptionHandler.cpp  Message.cpp  MessageRingQueue.cpp
Lab4/WinAPI/Tests/: ExceptionHandlerTests.cpp  MessageRingQueueTests.cpp  MessageTests.cpp  SenderTests.cpp
Lab5/Boost/: CMakeLists.txt  Client.cpp  Server.cpp
Lab5/Boost/Headers/: ClientHandler.h  ExceptionHandler.h  PipeClient.h  PipeRequest.h  PipeRequestType.h  PipeResponse.h  PipeServer.h  ProcessHandler.h  RecordLockManager.h  ServerHandler.h
Lab5/Boost/Source/: ClientHandler.cpp  ExceptionHandler.cpp  PipeClient.cpp  PipeRequestType.cpp  PipeResponseStatus.cpp  PipeServer.cpp  ProcessHandler.cpp  RecordLockManager.cpp  ServerHandler.cpp
Lab5/Boost/Tests/: EmployeeStorageTests.cpp  ExceptionHandlerTests.cpp  PipeClientTests.cpp  PipeServerTests.cpp  ProcessHandlerTests.cpp  RecordLockManagerTests.cpp  ServerHandlerTests.cpp
Lab5/WinAPI/: CMakeLists.txt  Client.cpp  Server.cpp
Lab5/WinAPI/Headers/: Employee.h  EmployeeFile.h  EmployeeStorage.h  ExceptionHandler.h  PipeClient.h  PipeRequest.h  PipeResponse.h  PipeResponseStatus.h  PipeServer.h  ProcessHandler.h  RecordLockManager.h  ServerHandler.h
Lab5/WinAPI/Source/: ClientHandler.cpp  Employee.cpp  EmployeeFile.cpp  EmployeeStorage.cpp  ExceptionHandler.cpp  PipeClient.cpp  PipeRequest.cpp  PipeResponse.cpp  PipeServer.cpp  ProcessHandler.cpp  RecordLockManager.cpp  ServerHandler.cpp
Lab5/WinAPI/Tests/: ClientHandlerTests.cpp  EmployeeStorageTests.cpp  EmployeeTests.cpp  ExceptionHandlerTests.cpp  PipeClientTests.cpp  PipeRequestTests.cpp  PipeResponseTests.cpp  PipeServerTests.cpp  ProcessHandlerTests.cpp  ServerHandlerTests.cpp  TestMain.cpp
